[package]
name = "CS120-project"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters = "0.3.6"
code-rs = "*"   
num-integer = "*"
num-traits = "*"
anyhow = "*"
futures = "*"
hound = "*"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
rodio = "0.19"
cpal = { version = "*", features = ["asio"] }
rand = "0.8"
rand_distr = "0.4"

[build]
rustflags = ["-Awarnings"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3