[package]
name = "CS120-project"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters = "0.3.6"
code-rs = "*"   
num-integer = "*"
num-traits = "*"
anyhow = "*"
futures = "*"
hound = "*"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tokio-stream = "*"
rodio = "0.19"
cpal = { version = "*", features = ["asio"] }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"

[profile.dev]
warnings = false