[package]
name = "CS120-project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
code-rs = "*"   
cpal = { version = "*", features = ["asio"] }
futures = "*"
hound = "*"
num-integer = "*"
num-traits = "*"
plotters = "0.3.6"
rand = "0.8"
rand_distr = "0.4"
rodio = "0.20.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "*"
tokio-util = { version = "0.7.12", features = ["full"] }
wintun = "0.5.0"
pcap = {version = "*", features = ["capture-stream"] } 
pnet = "0.35.0"
pnet_transport = "0.35.0"